# api-gateway/api/docs/swagger.json
@@ -928,7 +928,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "location"
+                    "courier"
                 ],
                 "summary": "Create location",
                 "parameters": [
@@ -979,7 +979,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "location"
+                    "courier"
                 ],
                 "summary": "Get all location",
                 "parameters": [
@@ -1027,7 +1027,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "location"
+                    "courier"
                 ],
                 "summary": "Get location",
                 "parameters": [
@@ -1074,7 +1074,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "location"
+                    "courier"
                 ],
                 "summary": "Update location",
                 "parameters": [
@@ -1132,7 +1132,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "location"
+                    "courier"
                 ],
                 "summary": "Delete location",
                 "parameters": [
@@ -1650,6 +1650,103 @@
                 }
             }
         },
+        "/order/item/all": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get all item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "Get all item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "OrderId",
+                        "name": "order_id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/order.OrderItemGetAllRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid parameters",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/order/item/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get a item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "Get item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "OrderItem ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/order.OrderItemGetByIdRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/order/{id}": {
             "get": {
                 "security": [
@@ -1739,103 +1836,6 @@
                     },
                     "404": {
                         "description": "Order not found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/order_item/all": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get all item",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "order item"
-                ],
-                "summary": "Get all item",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "OrderId",
-                        "name": "order_id",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/order.OrderItemGetAllRes"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid parameters",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/order_item/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get a item",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "order item"
-                ],
-                "summary": "Get item",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "OrderItem ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/order.OrderItemGetByIdRes"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request payload",
                         "schema": {
                             "type": "string"
                         }
